--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.1.3",
-        "axios": "^1.6.4",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0",
         "vue": "^3.5.3"
     },
     "dependencies": {
-        "sass": "^1.78.0"
+        "@vee-validate/rules": "^4.13.2",
+        "sass": "^1.78.0",
+        "vee-validate": "^4.13.2",
+        "yup": "^1.4.0"
     }
 }
